--- a/src/design/index.less
+++ b/src/design/index.less
@@ -18,6 +18,7 @@ html{
 
 html,
 body {
+  font-size:16px;
   width: 100%;
   height: 100%;
   overflow: visible !important;
@@ -48,3 +49,40 @@ ul li{
     padding:0px;
     margin:0px;
 }
+
+@media screen and (max-width:1920){
+  html{
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width:1366) {
+  html{
+    font-size: 16px;
+  }
+}
+
+@media only screen and (max-width: 1029px) {
+  html{
+    font-size: 16px ;
+  }
+}
+
+/* 打印样式 */
+@media print {}
+/* 手机等小屏幕手持设备 */
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  html{
+    font-size:16px;
+  }
+}
+/* 平板之类的宽度 1024 以下设备 */
+@media only screen and (min-width: 321px) and (max-width: 1024px) {
+  html{
+    font-size: 14px;
+  }
+}
+
+
+
+
