--- a/src/design/index.less
+++ b/src/design/index.less
@@ -7,18 +7,18 @@
 // input:-webkit-autofill {
 // -webkit-box-shadow: 0 0 0 1000px white inset !important;
 // }
-  
+
 // :-webkit-autofill {
 // transition: background-color 5000s ease-in-out 0s !important;
 // }
 
-html{
-    overflow: hidden;
+html {
+  overflow: hidden;
 }
 
 html,
 body {
-  font-size:16px;
+  font-size: 16px;
   width: 100%;
   height: 100%;
   overflow: visible !important;
@@ -34,7 +34,6 @@ body {
   }
 }
 
-
 a:focus,
 a:active,
 button,
@@ -44,45 +43,42 @@ span {
   outline: none !important;
 }
 
-ul li{
-    list-style: none;
-    padding:0px;
-    margin:0px;
+ul li {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
 }
 
-@media screen and (max-width:1920){
-  html{
+@media screen and (max-width: 1920) {
+  html {
     font-size: 16px;
   }
 }
 
-@media screen and (max-width:1366) {
-  html{
+@media screen and (max-width: 1366) {
+  html {
     font-size: 16px;
   }
 }
 
 @media only screen and (max-width: 1029px) {
-  html{
-    font-size: 16px ;
+  html {
+    font-size: 16px;
   }
 }
 
 /* 打印样式 */
-@media print {}
+@media print {
+}
 /* 手机等小屏幕手持设备 */
 @media screen and (min-width: 320px) and (max-width: 480px) {
-  html{
-    font-size:16px;
+  html {
+    font-size: 16px;
   }
 }
 /* 平板之类的宽度 1024 以下设备 */
 @media only screen and (min-width: 321px) and (max-width: 1024px) {
-  html{
+  html {
     font-size: 14px;
   }
 }
-
-
-
-
